# WoWorld-Design

./: .gitattributes  .gitignore  CLAUDE-INTERFACES.md  CLAUDE.md  DEVLOG-2026-07-01.md  DEVLOG-2026-07-02.md  DEVLOG-2026-07-05.md  DEVLOG-2026-07-06.md  WORKFLOW.md  findings.md  godot-rust中文文档.docx  progress.md  session-handoff-20260628-006.md  session-handoff-20260629-007.md  session-handoff-20260701-009.md  session-handoff.md  task_plan.md
.obsidian/: graph.json  (+1 more)
woworld/: .gitignore  Cargo.toml  README.md
woworld/assets/: action_registry.toml  biomes.toml  input_feel.toml  material_colors.toml  movement_profiles.toml  noise_params.toml  speech_fragments.toml
woworld/assets/items/: test_items.toml
woworld/crates/woworld_atmosphere/: Cargo.toml
woworld/crates/woworld_atmosphere/assets/: atmos_curve.toml
woworld/crates/woworld_atmosphere/src/: lib.rs  resolved_atmosphere.rs  synthesizer.rs  time_curve.rs  traits.rs  weather.rs
woworld/crates/woworld_core/: Cargo.toml
woworld/crates/woworld_core/src/: action.rs  camera.rs  density.rs  edit_terrain.rs  entity_visual.rs  id.rs  input.rs  interact.rs  kinematics.rs  lib.rs  lod.rs  material.rs  movement.rs  naming.rs  ocean.rs  player.rs  spatial.rs  speech_bubble.rs  time.rs  types.rs  vegetation.rs  weather_types.rs
woworld/crates/woworld_core/src/culture/: beauty.rs  building.rs  communication.rs  dietary.rs  fertility.rs  mod.rs  relationship.rs
woworld/crates/woworld_core/src/economy/: behavioral.rs  bootstrap.rs  listing.rs  mod.rs
woworld/crates/woworld_core/src/faith/: mod.rs
woworld/crates/woworld_core/src/item/: assembly.rs  equipment.rs  inventory.rs  inventory_tuning.rs  mod.rs
woworld/crates/woworld_core/src/power/: mod.rs
woworld/crates/woworld_ecs/: Cargo.toml
woworld/crates/woworld_ecs/src/: entity_id.rs  lib.rs  prng.rs
woworld/crates/woworld_ecs/src/components/: action.rs  action_state.rs  aesthetic.rs  biases.rs  bigfive.rs  circadian.rs  cognitive.rs  culture.rs  economy.rs  emotion.rs  entity_kind.rs  faith.rs  gender.rs  goal.rs  growth.rs  input_state.rs  inventory.rs  item.rs  lifecycle.rs  lod.rs  mod.rs  movement.rs  movement_state.rs  needs.rs  player.rs  social.rs  transform.rs  vitals.rs
woworld/crates/woworld_ecs/src/events/: mod.rs
woworld/crates/woworld_ecs/src/resources/: action_instance_counter.rs  action_registry.rs  culture_registry.rs  economy_registry.rs  encounter_state.rs  faith_registry.rs  interact.rs  inventory_registry.rs  item_registry.rs  mod.rs  movement_profile_registry.rs  power_registry.rs  relation_storage.rs  spatial_grid.rs  speech_bubble_state.rs  speech_fragment_registry.rs
woworld/crates/woworld_ecs/src/systems/: entity_visual.rs  lod_coordinator.rs  mod.rs
woworld/crates/woworld_ecs/src/systems/action/: action_controller.rs  action_system.rs  mod.rs
woworld/crates/woworld_ecs/src/systems/culture/: mod.rs
woworld/crates/woworld_ecs/src/systems/economy/: mod.rs  needs.rs
woworld/crates/woworld_ecs/src/systems/faith/: mod.rs
woworld/crates/woworld_ecs/src/systems/input/: action_resolver_system.rs  coyote_time_system.rs  input_buffer_system.rs  interact_context_system.rs  mod.rs
woworld/crates/woworld_ecs/src/systems/item/: inventory.rs  mod.rs
woworld/crates/woworld_ecs/src/systems/life/: cleanup.rs  corpse_decay.rs  death_watch.rs  item_spawn.rs  loot_roll.rs  mod.rs  regen.rs
woworld/crates/woworld_ecs/tests/: sprint062_actionresolver.rs  sprint064_jump.rs  sprint065_sustain.rs  sprint066_feel.rs  step5e_pipeline.rs
woworld/crates/woworld_godot/: Cargo.toml
woworld/crates/woworld_godot/src/: debug_console.rs  entity_renderer.rs  lib.rs  ocean.rs  terrain_chunk.rs  terrain_mesh.rs  voxel_chunk.rs
woworld/crates/woworld_save/: Cargo.toml
woworld/crates/woworld_save/src/: header.rs  lib.rs  snapshot.rs  system.rs  trait_def.rs
woworld/crates/woworld_spatial/: Cargo.toml
woworld/crates/woworld_spatial/src/: entity_index.rs  event_bus.rs  lib.rs  visibility.rs
woworld/crates/woworld_vegetation/: Cargo.toml
woworld/crates/woworld_vegetation/assets/: species.toml
woworld/crates/woworld_vegetation/src/: community.rs  lib.rs  noise.rs  provider.rs  species.rs
woworld/crates/woworld_worldgen/: Cargo.toml
woworld/crates/woworld_worldgen/src/: biome.rs  cave.rs  chunk_manager.rs  clipmap.rs  density.rs  lib.rs  marching_cubes.rs  noise_gen.rs  ocean.rs  seed.rs  terrain.rs  terrain_mesh.rs  time.rs  transition_tables.rs  transvoxel.rs  tri_table_data.rs  vegetation.rs
woworld/godot/: WoWorld.gdextension  WoWorld.gdextension.uid  project.godot
woworld/godot/scenes/: main.tscn
woworld/godot/scripts/: camera_rig.gd  camera_rig.gd.uid  input_bridge.gd  input_bridge.gd.uid  player.gd  player.gd.uid  terrain_renderer.gd  terrain_renderer.gd.uid  time_manager.gd  time_manager.gd.uid  world_origin.gd.uid
woworld/godot/shaders/: ocean.gdshader  ocean.gdshader.uid  terrain.gdshader  terrain.gdshader.uid  voxel_terrain.gdshader  voxel_terrain.gdshader.uid
(+3224 files in other folders)
