[package]
name = "woworld_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# 核心 crate 保持最少依赖
# glam: SIMD 加速向量/矩阵运算（serde feature 用于存档序列化）
glam = { version = "0.28", features = ["bytemuck", "serde"] }
# serde: 存档序列化（V6 起非 optional——所有消费者均需要）
serde = { version = "1", features = ["derive"] }
