[package]
name = "woworld_godot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# GDExtension Rust 绑定
godot = "0.5"
rayon = "1.10"

# 核心类型（workspace 内部依赖）
woworld_core = { path = "../woworld_core" }
woworld_worldgen = { path = "../woworld_worldgen" }
woworld_atmosphere = { path = "../woworld_atmosphere" }
woworld_ecs = { path = "../woworld_ecs" }

# ECS 存储（仅 WorldDriver 使用）
hecs = "0.10"
