[package]
name = "woworld_vegetation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
woworld_core = { path = "../woworld_core" }
woworld_worldgen = { path = "../woworld_worldgen" }
glam = "0.28"
noise = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
